--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
